--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.4.0",
