--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "sideEffects": false,
+  "type": "module",
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
@@ -10,32 +11,33 @@
     "start": "remix-serve build"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
-    "@prisma/client": "^4.2.1",
-    "@remix-run/node": "^1.6.8",
-    "@remix-run/react": "^1.6.8",
-    "@remix-run/serve": "^1.6.8",
-    "autoprefixer": "^10.4.8",
-    "classcat": "^5.0.3",
-    "concurrently": "^7.3.0",
-    "postcss": "^8.4.16",
+    "@heroicons/react": "^2.1.1",
+    "@prisma/client": "^5.7.1",
+    "@remix-run/node": "^2.4.1",
+    "@remix-run/react": "^2.4.1",
+    "@remix-run/serve": "^2.4.1",
+    "@remix-run/v1-route-convention": "^0.1.4",
+    "autoprefixer": "^10.4.16",
+    "classcat": "^5.0.4",
+    "concurrently": "^8.2.2",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.4.0",
-    "@remix-run/dev": "^1.6.8",
-    "@remix-run/eslint-config": "^1.6.8",
-    "@tailwindcss/typography": "^0.5.4",
-    "@types/node": "^18.7.4",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "eslint": "^8.20.0",
-    "prisma": "^4.2.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "@faker-js/faker": "^8.3.1",
+    "@remix-run/dev": "^2.4.1",
+    "@remix-run/eslint-config": "^2.4.1",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "eslint": "^8.56.0",
+    "prisma": "^5.7.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=14"
